First impl of the freecad script integration with my own lib to allow easier scripting.

--- a/sandboxes/opencsg/CMakeLists.txt
+++ b/sandboxes/opencsg/CMakeLists.txt
@@ -10,7 +10,7 @@ add_executable(opencsg_example WIN32
     ${CMAKE_CURRENT_SOURCE_DIR}/../../src/slic3r/GUI/I18N.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/../../src/slic3r/GUI/I18N.cpp)
 
-find_package(wxWidgets 3.1 REQUIRED COMPONENTS core base gl html)
+find_package(wxWidgets 3.1 REQUIRED COMPONENTS core base gl html stc scintilla aui)
 find_package(OpenGL REQUIRED)
 find_package(GLEW REQUIRED)
 find_package(OpenCSG REQUIRED)
