--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -40,9 +40,9 @@ if (SLIC3R_GUI)
     if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
         set (wxWidgets_CONFIG_OPTIONS "--toolkit=gtk${SLIC3R_GTK}")
         if (SLIC3R_WX_STABLE)
-            find_package(wxWidgets 3.0 REQUIRED COMPONENTS base core adv html gl)
+            find_package(wxWidgets 3.0 REQUIRED COMPONENTS base core adv html gl stc scintilla aui)
         else ()
-            find_package(wxWidgets 3.1 QUIET COMPONENTS base core adv html gl)
+            find_package(wxWidgets 3.1 QUIET COMPONENTS base core adv html gl stc scintilla aui)
 
             if (NOT wxWidgets_FOUND)
                 message(FATAL_ERROR "\nCould not find wxWidgets 3.1.\n"
@@ -50,7 +50,7 @@ if (SLIC3R_GUI)
             endif ()
         endif ()
     else ()
-        find_package(wxWidgets 3.1 REQUIRED COMPONENTS html adv gl core base)
+        find_package(wxWidgets 3.1 REQUIRED COMPONENTS html adv gl core base stc scintilla aui)
     endif ()
 
     if(UNIX)
